modified:   src/calc.rs 	modified:   src/main.rs 	modified:   src/output.rs 	new file:   src/solve.rs 	deleted:    src/solvex.rs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,13 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug",
-            "program": "${workspaceFolder}/<executable file>",
-            "args": [],
-            "cwd": "${workspaceFolder}"
+            "name": "Cargo, 启动!",
+            "cargo": {
+                "args": [
+                    "build",
+                ]
+            },
+            "args": []
         }
     ]
 }
