modified:   .vscode/launch.json 	modified:   Cargo.lock 	modified:   Cargo.toml 	modified:   README.md 	new file:   locales/app.yml 	modified:   src/calc.rs 	modified:   src/main.rs 	new file:   src/mathcmd.rs 	modified:   src/output.rs 	modified:   src/solve.rs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,13 +7,27 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Cargo, 启动!",
+            "name": "Cargo test",
             "cargo": {
                 "args": [
-                    "build",
+                    "test",
+                    "--no-run",
+                    "--lib"
                 ]
             },
             "args": []
-        }
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Cargo launch",
+            "cargo": {
+                "args": [
+                    "build"
+                ]
+            },
+            "args": []
+        },
+        
     ]
 }
