--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "editor.fontFamily": "'Fira Code', 'monospace', monospace",
+    "i18n-ally.localesPaths": [
+        "locales"
+    ],
     
 }
