--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,19 @@
 {
-    "editor.fontFamily": "'Fira Code', 'monospace', monospace",
+    "editor.fontFamily": "JetBrains Mono, 'monospace', monospace",
     "i18n-ally.localesPaths": [
         "locales"
     ],
+    "rust-analyzer.linkedProjects": [
+        "./Cargo.toml"
+    ],
+    "editor.defaultFormatter": "rust-lang.rust-analyzer",
+    "editor.formatOnSave": true,
+    "editor.formatOnPaste": true,
+    "[yaml]": {
+        "editor.defaultFormatter": "redhat.vscode-yaml"
+    },
+    "[toml]": {
+        "editor.defaultFormatter": "tamasfe.even-better-toml"
+    },
     
 }
