modified:   locales/app.yml 	modified:   src/cache.rs 	modified:   src/calc.rs 	modified:   src/data.rs 	modified:   src/functions.rs 	modified:   src/main.rs 	modified:   src/mathcmd.rs 	new file:   src/modules/mod.rs 	renamed:    src/solve.rs -> src/modules/solve.rs 	modified:   src/output.rs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,8 @@
         "editor.defaultFormatter": "tamasfe.even-better-toml"
     },
     "editor.fontSize": 16,
+    "[jsonc]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    },
     
 }
