new file:   src/libs/error.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 colored = "2.1.0"
 current_locale = "0.1.1"
 rust-i18n = "2.3.0"
+clap = { version = "4.4.16", features = ["derive"] }
