--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "i18n-ally.localesPaths": [
         "locales"
     ],
-    "i18n-ally.sourceLanguage": "zh-CN",
+    "i18n-ally.sourceLanguage": "en",
     "rust-analyzer.linkedProjects": [
         "./Cargo.toml"
     ],
@@ -21,5 +21,10 @@
     "[yaml]": {
         "editor.defaultFormatter": "redhat.vscode-yaml"
     },
-    "i18n-ally.keystyle": "nested"
+    "i18n-ally.keystyle": "nested",
+    "i18n-ally.translate.deepl.useFreeApiEntry": true,
+    "i18n-ally.translate.engines": [
+        "libretranslate"
+    ],
+    "i18n-ally.translate.libre.apiRoot": "https://localhost:5000"
 }
