modified:   src/functions.rs 	modified:   src/libs/memory.rs 	modified:   src/libs/mod.rs 	modified:   src/libs/output.rs 	modified:   src/libs/point.rs 	modified:   src/main.rs 	modified:   src/mathcmd.rs 	modified:   src/modules/calc.rs 	modified:   src/modules/geo.rs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
     ],
     "i18n-ally.sourceLanguage": "en",
     "rust-analyzer.linkedProjects": [
+        "./Cargo.toml",
+        "./Cargo.toml",
         "./Cargo.toml"
     ],
     "editor.defaultFormatter": "rust-lang.rust-analyzer",
