--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mathcmd"
-version = "0.3.3"
+version = "0.4.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 colored = "2.1.0"
 current_locale = "0.1.1"
-rust-i18n = "3.0.0"
-clap = { version = "4.4.16", features = ["derive"] }
+rust-i18n = "3.0.1"
+clap = { version = "4.5.4", features = ["derive", "cargo"] }
